--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,19 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.logoKotibet {
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .logoKotibet {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #38456091;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,11 @@
 
 .App-link {
   color: #61dafb;
+}
+.container {
+  display: flex;
+  flex-direction: row row-reverse;
+  justify-content:space-around;
 }
 
 @keyframes App-logo-spin {
