--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,37 @@
 .App {
   text-align: center;
 }
-
-.logoKotibet {
-  height: 20vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .logoKotibet {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #38456091;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.nav{
+  background-color: darkslategray;
+  color: beige;
+  display:flex;
+  justify-content : space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 2rem;
+  padding:0rem;
 }
+.home-title{
+  font: size 2rem; ;
 
-.App-link {
-  color: #61dafb;
 }
-.container {
+.nav ul{
+  padding:0;
+  margin:0;
+  list-style-type: none;
   display: flex;
-  flex-direction: row row-reverse;
-  justify-content:space-around;
+  gap: 1rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav a {
+color:inherit;
+text-decoration:none;
+height: 100%;
+display:flex;
+align-items:stretch;
+padding: .25rem
+}
+.nav li.active{
+  background-color:cadetblue;
+}
+.nav li:hover{
+  background-color:rgb(95, 224, 231);
 }
